--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
 	</head>
 	<body>
 
-		<h1>Tai yra antraste</h1>
-		<p>Tai yra paragrafas.</p>
-		<div>O cia yra turinio skyrius.</div>
+		<header>
+			<ul>
+				<li class="meniu_item">Apie</li>
+				<li class="meniu_item">Portfolio</li>
+				<li class="meniu_item">Kontaktai</li>
+			</ul>
+		</header>
+		<aside>
+		</aside>
+		<main>
+		</main>
+		<footer>
+		</footer>
 
 	</body>
 </html>
