--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="lt">
 	<head>
 		<title>Puslapio pavadinimas</title>
 	</head>
@@ -7,16 +7,26 @@
 
 		<header>
 			<ul>
-				<li class="meniu_item">Apie</li>
-				<li class="meniu_item">Portfolio</li>
-				<li class="meniu_item">Kontaktai</li>
+				<li><a href="http://portfolio.lt/index.html">Apie</a></li>
+				<li><a href="/portfolio.html">Portfolio</a></li>
+				<li><a href="/kontaktai.html">Kontaktai</a></li>
 			</ul>
 		</header>
 		<aside>
+		
 		</aside>
 		<main>
+			<img src="img/random_img1.jpg" alt="img 1"/>
+			<img src="img/cat_img1.jpg" alt="img 2"/>
+			<img src="img/cat_image2.jpg" alt="img 3"/>
+			<picture>
+				<source media="(min-width600px)" srcset="img/cat_image2.jpg">
+				<img src="img/random_img1.jpg" alt="img 1"/>
+			</picture>
+
 		</main>
 		<footer>
+		
 		</footer>
 
 	</body>
