--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="lt">
 	<head>
 		<title>Puslapio pavadinimas</title>
+		<link rel="stylesheet" href="css/reset.css">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/layout.css">
 	</head>
 	<body>
 
@@ -16,17 +19,18 @@
 		
 		</aside>
 		<main>
-			<img src="img/random_img1.jpg" alt="img 1"/>
+<!--			<img src="img/random_img1.jpg" alt="img 1"/>-->
 			<img src="img/cat_img1.jpg" alt="img 2"/>
 			<img src="img/cat_image2.jpg" alt="img 3"/>
-			<picture>
-				<source media="(min-width600px)" srcset="img/cat_image2.jpg">
-				<img src="img/random_img1.jpg" alt="img 1"/>
-			</picture>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consectetur consequatur cumque deleniti doloremque est et harum hic minus mollitia nemo porro, quod recusandae reiciendis rem reprehenderit veniam, veritatis vero!
+<!--			<picture>-->
+<!--				<source media="(min-width600px)" srcset="img/cat_image2.jpg">-->
+<!--				<img src="img/random_img1.jpg" alt="img 1"/>-->
+<!--			</picture>-->
 
 		</main>
 		<footer>
-		
+			Visos teises saugomos &copy;2019
 		</footer>
 
 	</body>
