--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,1 +1,47 @@
-kontaktai
+
+<!DOCTYPE html>
+<html lang="lt">
+<head>
+    <title>Kontaktai</title>
+</head>
+<body>
+
+<header>
+
+</header>
+<aside>
+
+</aside>
+<main>
+    <form action="kursiustiduomenis.php">
+        <input name="vardas" type="text" placeholder="Jusu vardas"></br>
+        <input name="pastas" type="text" placeholder="Jusu el. pasto adresas"></br>
+        <input name="tema" type="text" placeholder="Zinutes tema"></br>
+        <textarea name="zinute" rows="10" cols="30"
+            placeholder="Zinute">
+            </textarea></br>
+        <input value="Siusti zinute" type="submit"/>
+    </form>
+    </br></br>
+    <form action="kursiustiduomenis.php">
+        <label for="vardas">Jusu vardas</label>
+        &nbsp;<input name="vardas" type="text" id="vardas"></br>
+        <label for="pastas">Jusu el pasto adresas</label>
+        <input name="pastas" type="text"  id="pastas"></br>
+        <label for="tema">Zinutes tema</label>
+        <input name="tema" type="text" id="tema"></br>
+        <label for="zinute">Zinute</label>
+        <textarea name="zinute" rows="10" cols="30" id="zinute" >
+
+            </textarea></br>
+        <input value="Siusti zinute" type="submit"/>
+    </form>
+
+
+</main>
+<footer>
+Visos teises saugomos &copy;2019
+</footer>
+
+</body>
+</html>
