--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/layout.css">
+		<link rel="stylesheet" href="css/Navigacija.css">
 	</head>
 	<body>
 	<div id="grid">
@@ -13,12 +14,14 @@
 				<li><a href="http://portfolio.lt/index.html">Apie</a></li>
 				<li><a href="/portfolio.html">Portfolio</a></li>
 				<li><a href="/kontaktai.html">Kontaktai</a></li>
+
 			</ul>
 		</header>
 		<aside>
 
 		</aside>
 		<main>
+
 			<!--			<img src="img/random_img1.jpg" alt="img 1"/>-->
 			<img src="img/cat_img1.jpg" alt="img 2"/>
 			<img src="img/cat_image2.jpg" alt="img 3"/>
