--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/layout.css">
 		<link rel="stylesheet" href="css/Navigacija.css">
+
 	</head>
 	<body>
 	<div id="grid">
 		<header>
 			<ul>
 				<li><a href="http://portfolio.lt/index.html">Apie</a></li>
-				<li><a href="/portfolio.html">Portfolio</a></li>
-				<li><a href="/kontaktai.html">Kontaktai</a></li>
+<!--				<li><a href="/portfolio.html">Portfolio</a></li>-->
+<!--				<li><a href="/kontaktai.html">Kontaktai</a></li>-->
 
 			</ul>
 		</header>
@@ -39,6 +40,6 @@
 	</div>
 
 
-
+	<script src="javascript/loader.js"></script>
 	</body>
 </html>
