--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<title>Puslapio pavadinimas</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/layout.css">
 		<link rel="stylesheet" href="css/Navigacija.css">
+		<link rel="stylesheet" href="css/layout.css">
+
+
 
 	</head>
 	<body>
@@ -41,5 +43,7 @@
 
 
 	<script src="javascript/loader.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 	</body>
 </html>
