--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id="grid">
 		<header>
 			<ul>
-				<li><a href="http://portfolio.lt/index.html">Apie</a></li>
+<!--				<li><a href="http://portfolio.lt/index.html">Apie</a></li>-->
 <!--				<li><a href="/portfolio.html">Portfolio</a></li>-->
 <!--				<li><a href="/kontaktai.html">Kontaktai</a></li>-->
 
@@ -42,8 +42,8 @@
 	</div>
 
 
-	<script src="javascript/loader.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="javascript/loader.js"></script>
 
 	</body>
 </html>
