--- a/Baigiamasis/ShopList.html
+++ b/Baigiamasis/ShopList.html
@@ -2,27 +2,23 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/sarasasCSS.css">
-
 </head>
-
 <body>
-<div id="grid">
 
-    <div id="myDIV" class="header">
-        <h1>Pirkiniu sarasas</h1>
-        <input type="text" id="sarasas" placeholder="Nauja preke...">
-        <span onclick="newElement()" class="addBtn" id="addBtn">Add</span>
-    </div>
-
-    <ul id="myUL">
-        <li>Tuscia</li>
-        <li>Tuscia</li>
-        <li>Tuscia</li>
-        <li>Tuscia</li>
-    </ul>
+<div id="myDIV" class="header">
+    <h1>Pirkiniu sarasas</h1>
+    <input type="text" id="preke" placeholder="Nauja preke...">
+    <span onclick="newElement()" class="addBtn" id="addBtn">Prideti</span>
 </div>
 
+<ul id="myUL" class="connectedSortable" data-state="1"></ul>
 
+<ul id="myUL2" class="connectedSortable" data-state="2"></ul>
+
+
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/sarasasJS.js"></script>
+
 </body>
 </html>
